commit finally logos

--- a/R&D.html
+++ b/R&D.html
@@ -103,8 +103,8 @@
     <!--banner section end -->
 
     <!-- About R&D -->
-    <section class="vividus-rnd-about py-5">
-      <div class="container-fluid px-5">
+    <section class="vividus-rnd-about">
+      <div class="container-fluid p-0">
         <div class="row align-items-center">
           <div class="col-md-6 mb-4 mb-md-0">
             <img
@@ -141,8 +141,8 @@
     </section>
 
     <!-- Research Areas -->
-    <section class="vividus-rnd-areas py-5 bg-light">
-      <div class="container-fluid px-5">
+    <section class="vividus-rnd-areas  bg-light">
+      <div class="container-fluid p-0">
         <div class="text-center mb-5">
           <h2>Key Research Areas</h2>
           <p>
@@ -203,8 +203,8 @@
     </section>
 
     <!-- Innovation Highlights -->
-    <section class="vividus-rnd-innovation py-5">
-      <div class="container-fluid px-5">
+    <section class="vividus-rnd-innovation">
+      <div class="container-fluid p-0">
         <div class="row align-items-center">
           <div class="col-md-6 order-md-2 mb-4 mb-md-0">
             <img
@@ -229,8 +229,8 @@
     </section>
 
     <!-- Our Capabilities -->
-    <section class="vividus-collaboration-rnd-cap py-5 bg-white">
-      <div class="container-fluid px-5">
+    <section class="vividus-collaboration-rnd-cap bg-white">
+      <div class="container-fluid p-0">
         <div class="text-center mb-4">
           <h2>Our Capabilities</h2>
           <p>World-class infrastructure to drive innovation and discovery.</p>
@@ -257,8 +257,8 @@
     </section>
 
     <!-- Global Collaborations -->
-    <section class="vividus-collaboration-rnd-global py-5 bg-light">
-      <div class="container-fluid px-5">
+    <section class="vividus-collaboration-rnd-global bg-light">
+      <div class="container-fluid p-0">
         <div class="text-center mb-5">
           <h2>Global Collaborations</h2>
           <p>
@@ -295,8 +295,8 @@
     </section>
 
     <!-- Milestones in Innovation -->
-    <section class="vividus-collaboration-rnd-milestone py-5">
-      <div class="container-fluid px-5">
+    <section class="vividus-collaboration-rnd-milestone">
+      <div class="container-fluid p-0">
         <div class="text-center mb-5">
           <h2>Milestones in Innovation</h2>
           <p>A track record of excellence in pharmaceutical research.</p>
@@ -324,7 +324,7 @@
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-      <div class="container-fluid px-5">
+      <div class="container-fluid p-0">
         <div class="row align-items-center">
           <div class="col-md-8">
             <h2 class="vividus-contecthome-title">
@@ -347,8 +347,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main ">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
