--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <!-- about us section code  -->
 
     <section class="about-whatwe-section">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-start">
                 <!-- Left Text & Image -->
                 <div class="col-lg-7">
@@ -130,8 +130,8 @@
     </section>
 
     <!-- numbers count section code start  -->
-    <section class="vividus-homecount-section py-5">
-        <div class="container-fluid px-5">
+    <section class="vividus-homecount-section">
+        <div class="container-fluid p-0">
             <div class="row align-items-center text-center text-md-start">
                 <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
                     <h5 class="vividus-homecount-subtitle">Dedicated Support for Your Medication and Wellness</h5>
@@ -161,7 +161,7 @@
 
     <!-- why choose us code  -->
     <section class="about-whychooseus-main">
-        <div class="container-fluid px-5 about-whychooseus-container ">
+        <div class="container-fluid p-0 about-whychooseus-container ">
             <div class="row align-items-center">
                 <!-- Image Section -->
                 <div class="col-md-6">
@@ -197,8 +197,8 @@
     </section>
 
     <!-- our achievement section  -->
-    <section class="about-achievements-section py-5">
-        <div class="container-fluid px-5">
+    <section class="about-achievements-section">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <!-- Left Content -->
                 <div class="col-lg-4 mb-4 mb-lg-0">
@@ -278,8 +278,8 @@
     </section>
 
     <!-- <faqs section start  -->
-    <section class="vividus-faqs-section py-5">
-        <div class="container-fluid px-5">
+    <section class="vividus-faqs-section">
+        <div class="container-fluid p-0">
             <div class="text-center mb-4">
                 <div class="vividus-faqs-subtitle">FAQs</div>
                 <h2 class="vividus-faqs-title font-weight-bold">Frequently Asked Questions</h2>
@@ -352,7 +352,7 @@
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -370,8 +370,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
