--- a/careers.html
+++ b/careers.html
@@ -103,8 +103,8 @@
     <!--banner section end -->
 
     <!-- Why Join Vividus -->
-    <section class="vividus-careers-values py-5 bg-light">
-      <div class="container-fluid px-5 text-center">
+    <section class="vividus-careers-values  bg-light">
+      <div class="container-fluid p-0 text-center">
         <h2 class="mb-3">Why Join Vividus?</h2>
         <p class="mb-5">
           We are not just building careers — we are shaping the future of
@@ -172,7 +172,7 @@
     </section>
 
     <!-- Open Positions -->
-    <section class="container-fluid px-5 mt-5">
+    <section class="container-fluid vividus-careers-section-container ">
       <h2 class="vividus-careers-section-title">Open Positions</h2>
 
       <div class="row">
@@ -208,7 +208,7 @@
 
     <!-- Apply Section -->
     <section class="vividus-careers-form-section">
-      <div class="container py-5">
+      <div class="container">
         <h3 class="text-center mb-4 fw-800">Apply Now</h3>
         <form>
           <div class="row">
@@ -270,7 +270,7 @@
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-      <div class="container-fluid px-5">
+      <div class="container-fluid p-0">
         <div class="row align-items-center">
           <div class="col-md-8">
             <h2 class="vividus-contecthome-title">
@@ -293,8 +293,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
