--- a/ent.html
+++ b/ent.html
@@ -22,7 +22,7 @@
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -69,74 +69,102 @@
         <h1 class="subpage-bannersection-title">ENT & Physician</h1>
     </div>
     <!--banner section end -->
-
-    <div class="container-fluid p-5">
+    <div class="container-fluid vividu-ent-container">
         <div class="text-start vividu-ent-header mb-4">
             <h2>ENT & Physician Segment</h2>
         </div>
         <div class="row g-4 d-flex">
+
+            <!-- Rabedus & Esogast -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center">Rabedus <span style="color: darkgreen;">- DSR</span></h2>
-                    <p class="text-center">Rabeprazole Sodium 20mg +<br> Domperidone SA 30mg Capsules</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkblue;">Esogast</span> DSR</h2>
-                    <p class="text-center">Esomeprazole 40 mg +<br> Domperidone SR 30 mg Capsules</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
+                    </h2>
+                    <p>Rabeprazole Sodium 20mg +<br> Domperidone SA 30mg Capsules</p>
+
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 40.png" alt="Esogast DSR" class="product-logo" />
+                    </h2>
+                    <p>Esomeprazole 40 mg +<br> Domperidone SR 30 mg Capsules</p>
                 </div>
             </div>
 
+            <!-- Vigor OD -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(13, 134, 13);">Vigor</span>-OD
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 56.png" alt="Vigor-OD" class="product-logo" />
                     </h2>
-                    <p class="text-center">Vitamin C 80mg Niacinamide 23mg + Vitamin B1 2.3mg Vitamin B2 3.2 mg +
+                    <p>Vitamin C 80mg Niacinamide 23mg + Vitamin B1 2.3mg Vitamin B2 3.2 mg +
                         Vitamin B6 3mg + Calcium Pantothenate 5mg Folic Acid 176.47mcg+ Vitamin B12 2.5mcg + Vitamin
                         A(As Palmitate) 15mcg + Sodium Carbonate 5mcg+ Chloride (As Manganse Chloride) 5mg </p>
                 </div>
             </div>
 
+            <!-- Cefponorm CV & Ledus M -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"> <span style="color: darkgreen;">Cefponorm CV
-                            200/125</span></h2>
-                    <p class="text-center">Cefpodoxime 200 mg + Clavulanate Acid<br> 125 mg Tablets</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">LEDUS</span> M</h2>
-                    <p class="text-center">Levocetrizine Hydrochloride 5mg +<br> Montelukast 10 mg Tablets</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 39.png" alt="Cefponorm CV 200/125" class="product-logo" />
+                    </h2>
+                    <p>Cefpodoxime 200 mg + Clavulanate Acid<br> 125 mg Tablets</p>
+
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 38.png" alt="LEDUS M" class="product-logo" />
+                    </h2>
+                    <p>Levocetrizine Hydrochloride 5mg +<br> Montelukast 10 mg Tablets</p>
                 </div>
             </div>
 
+            <!-- Pregadus M75 & Gabadus NT -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: #000;">PREGADUS</span> - M 75</h2>
-                    <p class="text-center">Pregabalin 75mg +<br> Methylcobalamin 750mcg Capsules</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">Gabadus</span>-NT</h2>
-                    <p class="text-center">Gabapentin IP 400 mg + Nortriptyline<br> Hydrochloride IP (Eq. to
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
+                    </h2>
+                    <p>Pregabalin 75mg +<br> Methylcobalamin 750mcg Capsules</p>
+
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 30.png" alt="Gabadus - NT" class="product-logo" />
+                    </h2>
+                    <p>Gabapentin IP 400 mg + Nortriptyline<br> Hydrochloride IP (Eq. to
                         Nortriptyline) 10 mg Tablets</p>
                 </div>
             </div>
 
+            <!-- M-Cobal CD -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkblue;">M-COBAL</span> CD</h2>
-                    <p class="text-center">Mecobalamin 1500mcg + Alpha Lipoic Acid 100mg + Myo-Inositol 100mg +
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 31.png" alt="M-COBAL CD" class="product-logo" />
+                    </h2>
+                    <p>Mecobalamin 1500mcg + Alpha Lipoic Acid 100mg + Myo-Inositol 100mg +
                         Benfotiamine 150mg + Folic Acid 1.5mg + Chromium 200mcg + Selenium 55mcg Capsules</p>
                 </div>
             </div>
 
+            <!-- AB Norm 100 & D3 Max 60k -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">AB NORM</span>-100</h2>
-                    <p class="text-center">Acebrophylline 100 mg Capsules</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgoldenrod;">D3 Max 60к</span></h2>
-                    <p class="text-center">Cholecalciferol Mouth Dissolving Tablets 60000IU</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB NORM - 100" class="product-logo" />
+                    </h2>
+                    <p>Acebrophylline 100 mg Capsules</p>
+
+                    <h2 class="ent-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 36.png" alt="D3 Max 60k" class="product-logo" />
+                    </h2>
+                    <p>Cholecalciferol Mouth Dissolving Tablets 60000IU</p>
                 </div>
             </div>
+
         </div>
     </div>
 
-
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -152,9 +180,10 @@
         </div>
     </section>
     <!-- our contact section code end -->
+
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main ">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
@@ -207,7 +236,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
