--- a/gynaecology.html
+++ b/gynaecology.html
@@ -22,7 +22,7 @@
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -70,94 +70,98 @@
     </div>
     <!--banner section end -->
 
-    <div class="container-fluid p-5">
+    <div class="container-fluid vividu-ent-container">
         <div class="text-start vividu-ent-header mb-4">
             <h2>Infertility, Obstetrics & Gynaecology</h2>
         </div>
         <div class="row g-4 d-flex">
+
+            <!-- Assure F & M -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center">ASSURE <span style="color: darkgreen;">- F</span></h2>
-                    <p class="text-center">Astaxanthin, Co-Enzyme Q10, L-Arginine, Melatonas, Lycopene Myo-Inositol,
-                        Selenam, Zinc, Vitaniin C with Multi Vitamin & Muth Mineral Tablets</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkblue;">ASSURE</span>-M</h2>
-                    <p class="text-center">Co-Enzyme Q10, Astaxanthin, Lycopene, L-Arginine, L-Carnitine, Zinc Tablets
-                    </p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 33.png" alt="ASSURE - F" class="product-logo" />
+                    <p>Astaxanthin, Co-Enzyme Q10, L-Arginine, Melatonin, Lycopene, Myo-Inositol, Selenium, Zinc,
+                        Vitamin C with Multi Vitamin & Multi Mineral Tablets</p>
+
+                    <img src="img/VIVIDUS Logos/Frame 17.png" alt="ASSURE - M" class="product-logo" />
+                    <p>Co-Enzyme Q10, Astaxanthin, Lycopene, L-Arginine, L-Carnitine, Zinc Tablets</p>
                 </div>
             </div>
 
+            <!-- Mom Folic & Mom Folic-D -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(13, 134, 13);">Mom </span>Folic
-                    </h2>
-                    <p class="text-center">L-Methylfolate 1000 mog, Methylezhalamin 1500 mcg Pyridoxat-5 Phosphate 500
-                        mcg</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(13, 134, 13);">Mom </span>Folic-D
-                    </h2>
-                    <p class="text-center">L-Methyllolate 1000 mcg, Methylcobalamin 1500 mcg, Pyridoxal-5-Phosphate 500
-                        mcg, DHA 200 mg</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 34.png" alt="Mom Folic" class="product-logo" />
+                    <p>L-Methylfolate 1000 mcg, Methylcobalamin 1500 mcg, Pyridoxal-5-Phosphate 500 mcg</p>
+
+                    <img src="img/VIVIDUS Logos/Frame 35.png" alt="Mom Folic-D" class="product-logo" />
+                    <p>L-Methylfolate 1000 mcg, Methylcobalamin 1500 mcg, Pyridoxal-5-Phosphate 500 mcg, DHA 200 mg</p>
                 </div>
             </div>
 
+            <!-- vivifer & calcidus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"> <span style="color: darkblue;">viviFer</span></h2>
-                    <p class="text-center">Ferrous Ascorbate 100 mg. Cyanocumin 7.5 mcg, Folic Acid 1.5 mg. Pyridoxine
-                        Hydrochlonde 15 mg, Cholecalc 1000 IU</p>
-                    <h2 class="ent-vividus-title text-center"><span style="color: black;">Calcidus</span></h2>
-                    <p class="text-center">Conel Calcium (from CORAL GRAINS) 500 mg, Vitamin 03 500 10</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 19 (1).png" alt="viviFer" class="product-logo" />
+                    <p>Ferrous Ascorbate 100 mg, Cyanocobalamin 7.5 mcg, Folic Acid 1.5 mg, Pyridoxine Hydrochloride 15
+                        mg, Cholecalciferol 1000 IU</p>
+
+                    <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo" />
+                    <p>Coral Calcium (from CORAL GRAINS) 500 mg, Vitamin D3 500 IU</p>
                 </div>
             </div>
 
+            <!-- ArgiDus -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: rgb(109, 6, 150);">Argidus</span></h2>
-                    <p class="text-center">L-Arginine 3 gms, Proanthocyanidin 75 mg</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 18.png" alt="Argidus" class="product-logo" />
+                    <p>L-Arginine 3 gms, Proanthocyanidin 75 mg</p>
                 </div>
             </div>
 
+            <!-- Cranfast-D -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">CRANFAST</span>- D</h2>
-                    <p class="text-center">Cranberry Extract 300 mg & D-Mannose 600 mg</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 16.png" alt="CRANFAST-D" class="product-logo" />
+                    <p>Cranberry Extract 300 mg & D-Mannose 600 mg</p>
                 </div>
             </div>
 
+            <!-- VIVI LIFE SAMSTS -->
             <div class="col-md-4 mb-4">
-                <div class="card p-3 ent-vividus-card">
-                    <h2 class="ent-vividus-title text-center"><span style="color: darkgreen;">VIVI LIFE SAMSTS</span>
-                    </h2>
-                    <p class="text-center">Biotin 30 mcg. Beta-Carotene 5 mg, Chromium 65 mcg, Selenium 30 mcg</p>
+                <div class="card p-3 ent-vividus-card text-center">
+                    <img src="img/VIVIDUS Logos/Frame 8.png" alt="VIVI LIFE SAMSTS" class="product-logo" />
+                    <p>Biotin 30 mcg, Beta-Carotene 5 mg, Chromium 65 mcg, Selenium 30 mcg</p>
                 </div>
             </div>
 
+            <!-- Trypsee Variants -->
             <div class="col-md-12 mb-4">
                 <div class="card p-3 ent-vividus-card">
-                    <div class="d-flex justify-content-between">
-                        <div class="col-md-3">
-                            <h2 class="ent-vividus-title text-center">TRYPSEE</h2>
-                            <p class="text-center">Trypsin Chymotrypsin 100000 AU</p>
+                    <div class="d-flex justify-content-between text-center flex-wrap">
+                        <div class="col-md-3 mb-3">
+                            <img src="img/VIVIDUS Logos/Frame 13.png" alt="TRYPSEE" class="product-logo" />
+                            <p>Trypsin Chymotrypsin 100000 AU</p>
                         </div>
-                        <div class="col-md-3">
-                            <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">PLUS</span>
-                            </h2>
-                            <p class="text-center">Trypsin Chymotrypsin 150000 AU, Aceclofenac 100 mg, Paracetamol 325
-                                mg</p>
+                        <div class="col-md-3 mb-3">
+                            <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE PLUS" class="product-logo" />
+                            <p>Trypsin Chymotrypsin 150000 AU, Aceclofenac 100 mg, Paracetamol 325 mg</p>
                         </div>
-                        <div class="col-md-3">
-                            <h2 class="ent-vividus-title text-center">TRYPSEE <span style="color: darkblue;">BR</span>
-                            </h2>
-                            <p class="text-center">Trypsin 48 mg. Bromelain 90 mg, Rutaside 100 mg</p>
+                        <div class="col-md-3 mb-3">
+                            <img src="img/VIVIDUS Logos/Frame 11.png" alt="TRYPSEE BR" class="product-logo" />
+                            <p>Trypsin 48 mg, Bromelain 90 mg, Rutaside 100 mg</p>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
+
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -175,8 +179,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main ">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
@@ -229,7 +233,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
@@ -239,7 +244,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>AOS.init();</script>>
+    <script>AOS.init();</script>
 </body>
 
 </html>
