--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- slider section code end -->
 
     <!-- our service  section code start -->
-    <div class="container-fluid vividus-services-container px-5 py-5">
+    <div class="container-fluid vividus-services-container">
         <div class="text-center mb-5">
             <h6>What We Offer</h6>
             <h2 class="vividus-services-titles1">Our Products</span></h2>
@@ -197,8 +197,8 @@
     <!-- our service  section code end -->
 
     <!-- About us section code start -->
-    <section class="vividus-aboutus-section py-5">
-        <div class="container-fluid px-5">
+    <section class="vividus-aboutus-section">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <!-- Left Side Images -->
                 <div class="col-lg-6 mb-4 mb-lg-0">
@@ -233,8 +233,8 @@
     <!-- About us section code end -->
 
     <!-- numbers count section code start  -->
-    <section class="vividus-homecount-section py-5">
-        <div class="container-fluid px-5">
+    <section class="vividus-homecount-section">
+        <div class="container-fluid p-0">
             <div class="row align-items-center text-center text-md-start">
                 <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
                     <h5 class="vividus-homecount-subtitle">Dedicated Support for Your Medication and Wellness</h5>
@@ -263,8 +263,8 @@
     <!-- numbers count section code end  -->
 
     <!-- <faqs section start  -->
-    <section class="vividus-faqs-section py-5">
-        <div class="container-fluid px-5">
+    <section class="vividus-faqs-section">
+        <div class="container-fluid p-0">
             <div class="text-center mb-4">
                 <div class="vividus-faqs-subtitle">FAQs</div>
                 <h2 class="vividus-faqs-title font-weight-bold">Frequently Asked Questions</h2>
@@ -333,7 +333,7 @@
 
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -351,8 +351,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
