--- a/orthopedic.html
+++ b/orthopedic.html
@@ -22,7 +22,7 @@
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -71,44 +71,24 @@
     <!--banner section end -->
 
 
-    <div class="container-fluid px-5 py-5">
+    <div class="container-fluid vividu-orthopedic-container">
         <div class="text-start vividu-orthopedic-header mb-4">
             <h2>ORTHOPAEDIC</h2>
         </div>
 
         <div class="row g-4">
-            <!-- First card: TRYSEE group -->
+
+            <!-- First card: TRYPSEE group -->
             <div class="col-md-4">
-                <div class="vividu-orthopedic-card vividu-orthopedic-red">
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+                <div class="vividu-orthopedic-card vividu-orthopedic-red text-center">
+                    <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 100000 AU</div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                            <strong style="color: rgb(18, 18, 119);">PLUS</strong>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE PLUS" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU,<br>Aceclofenac 100mg,
                         Paracetamol 325mg</div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                            <strong style="color: rgb(18, 18, 119);">BR</strong>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 11.png" alt="TRYPSEE BR" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg,<br>Rutoside Trihydrate BP
                         100mg</div>
                 </div>
@@ -117,23 +97,16 @@
             <!-- Middle card 1: JOINT LITE -->
             <div class="col-md-4 vividu-orthopedic-both">
                 <div>
-                    <div class="vividu-orthopedic-card vividu-orthopedic-orange">
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                                <span style="color: #3a1d03;">JOINT</span>
-                                <strong style="color: rgb(202, 31, 31);">LITE</strong>
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                TABLETS
-                            </small>
-                        </div>
+                    <div class="vividu-orthopedic-card vividu-orthopedic-orange text-center">
+                        <img src="img/VIVIDUS Logos/Frame 10.png" alt="JOINT LITE" class="product-logo mb-2" />
                         <div class="vividu-orthopedic-text">
                             Boswellia Serrata Extract (AKBA 30%) 50mg.<br>
-                            Collegen Peptide Type II 20mg. Rose Hip<br>
-                            Extract 75mg, Glucosamine HCI 750mg.<br>
+                            Collagen Peptide Type II 20mg, Rose Hip<br>
+                            Extract 75mg, Glucosamine HCI 750mg,<br>
                             Ginger Extract 20% 40mg, Iron 5mg,<br>
-                            Copper 0.5mg, Manganese 2mg. Selenium<br>
-                            20mcg, Zinc 5mg, Folic Acid 64.5mcg.<br> Vitamin B12 1.1mcg. Vitamin C 20mg.<br>
+                            Copper 0.5mg, Manganese 2mg,<br>
+                            Selenium 20mcg, Zinc 5mg, Folic Acid 64.5mcg,<br>
+                            Vitamin B12 1.1mcg, Vitamin C 20mg,<br>
                             Vitamin D3 7.5mcg
                         </div>
                     </div>
@@ -141,16 +114,8 @@
 
                 <!-- Middle card 2: FRACZERO -->
                 <div>
-                    <div class="vividu-orthopedic-card vividu-orthopedic-green">
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title"
-                                style="margin: 0; font-size: 32px; font-weight: 800; color: rgb(202, 31, 31);">
-                                FRACZERO
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                TABLETS
-                            </small>
-                        </div>
+                    <div class="vividu-orthopedic-card vividu-orthopedic-green text-center mt-0">
+                        <img src="img/VIVIDUS Logos/Frame 9.png" alt="FRACZERO" class="product-logo mb-2" />
                         <div class="vividu-orthopedic-text">
                             Cissus Quadrangularis Linn. Extract 250mg,<br>
                             Calcium Citrate Malate 600mg,<br>
@@ -162,59 +127,38 @@
 
             <!-- Last card: TENDOFORCE group -->
             <div class="col-md-4">
-                <div class="vividu-orthopedic-card vividu-orthopedic-blue">
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: -4px; font-size: 32px; font-weight: bolder; color: #08258d;">
-                            TENDOFORCE
-                        </h1>
-                        <small style="font-size: 12px; font-weight:600; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+                <div class="vividu-orthopedic-card vividu-orthopedic-blue text-center">
+
+                    <img src="img/VIVIDUS Logos/Frame 14.png" alt="TENDOFORCE" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
                         Collagen Peptide Type-I 40mg, Sodium<br>
                         Hyaluronate 30mg, Chondroitin Sulfate 200mg,<br>
                         Ascorbic Acid (Vitamin C) 12.5mg
                     </div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: 0; font-size: 32px; font-weight: bolder; color: #09184d;">
-                            Calcidus
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
                         Coral Calcium (from Coral Grains) 500mg,<br>
                         Vitamin D3 500 IU
                     </div>
-                    <div style="display: flex; align-items: end; gap:10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: 0; font-size: 32px; font-weight: bolder; color: #0f7614;">
-                            VIVILIFE
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 8.png" alt="VIVILIFE" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Biotin 30mcg, Beta-Carotene 5mg, Chromium <br>
-                        65mcg, Selenium 30mcg, Riboflavin 2mg,<br>
-                        Vitamin C 50mg, Zinc Sulphate 7.5mg with<br>
+                        Biotin 30mcg, Beta-Carotene 5mg, Chromium
+                        65mcg, Selenium 30mcg, Riboflavin 2mg,
+                        Vitamin C 50mg, Zinc Sulphate 7.5mg with
                         Multivitamin & Multi Minerals
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 
 
-
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -230,10 +174,10 @@
         </div>
     </section>
     <!-- our contact section code end -->
-     
+
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main ">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
@@ -286,7 +230,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
