--- a/urology.html
+++ b/urology.html
@@ -71,147 +71,74 @@
     <!--banner section end -->
 
 
-    <div class="container-fluid px-5 py-5">
+    <div class="container-fluid vividu-orthopedic-container">
         <div class="text-start vividu-orthopedic-header mb-4">
             <h2>Urology & General</h2>
         </div>
 
         <div class="row g-4">
-            <!-- First card: TRYSEE group -->
+            <!-- First card: TRYPSEE group -->
             <div class="col-md-4">
-                <div class="vividu-orthopedic-card vividu-orthopedic-red">
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+                <div class="vividu-orthopedic-card vividu-orthopedic-red text-center">
+                    <img src="img/VIVIDUS Logos/Frame 13.png" alt="TRYPSEE" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 100000 AU</div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                            <strong style="color: rgb(18, 18, 119);">PLUS</strong>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 12.png" alt="TRYPSEE PLUS" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin Chymotrypsin 150000 AU,<br>Aceclofenac 100mg,
                         Paracetamol 325mg</div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                            <span style="color: rgb(202, 31, 31);">TRYPSEE</span>
-                            <strong style="color: rgb(18, 18, 119);">BR</strong>
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 11.png" alt="TRYPSEE BR" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">Trypsin BP 48mg, Bromelain BP 90mg,<br>Rutoside Trihydrate BP
                         100mg</div>
                 </div>
             </div>
 
-            <!-- Middle card 1: JOINT LITE -->
+            <!-- Middle card -->
             <div class="col-md-4 vividu-orthopedic-both">
-                <div>
-                    <div class="vividu-orthopedic-card vividu-orthopedic-orange">
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                                <span style="color: #8f4607;">URIPACE</span>
-                                <strong style="color: rgb(202, 31, 31);">- D</strong>
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                TABLETS
-                            </small>
-                        </div>
-                        <div class="vividu-orthopedic-text">
-                            Tamsulosin Hydrochloride IP 0.4mg,<br>
-                            Dutasteride IP 0.5mg
-                        </div>
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                                <span style="color: #ca1f1f;">CRANFAST</span>
-                                <strong style="color: darkgreen;">- D</strong>
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                TABLETS
-                            </small>
-                        </div>
-                        <div class="vividu-orthopedic-text">
-                            Cranberry extra 300mg & D-mannose 600mg
-                        </div>
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                                <span style="color: darkblue;">ASSURE</span>
-                                <strong style="color: darkgreen;">- M</strong>
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                TABLETS
-                            </small>
-                        </div>
-                        <div class="vividu-orthopedic-text">
-                            Co-enzyme Q10, Astaxanthin, Lycopene,<br>
-                            L-Arginine, L-Carnitine, Zinc tabletes
-                        </div>
-                        <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                            <h1 class="vividu-orthopedic-title" style="margin: 0; font-size: 32px;">
-                                <span style="color: darkblue;">Argidus</span>
-                            </h1>
-                            <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                                SACHETS
-                            </small>
-                        </div>
-                        <div class="vividu-orthopedic-text">
-                            L-Arginine 3gms, Proanthocyanidin 75mg
-                        </div>
+                <div class="vividu-orthopedic-card vividu-orthopedic-orange text-center">
+                    <img src="img/VIVIDUS Logos/Frame 15.png" alt="URIPACE-D" class="product-logo mb-2" />
+                    <div class="vividu-orthopedic-text">
+                        Tamsulosin Hydrochloride IP 0.4mg,<br>
+                        Dutasteride IP 0.5mg
+                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 16.png" alt="CRANFAST-D" class="product-logo mt-3 mb-2" />
+                    <div class="vividu-orthopedic-text">
+                        Cranberry extract 300mg & D-Mannose 600mg
+                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 17.png" alt="ASSURE-M" class="product-logo mt-3 mb-2" />
+                    <div class="vividu-orthopedic-text">
+                        Co-enzyme Q10, Astaxanthin, Lycopene,<br>
+                        L-Arginine, L-Carnitine, Zinc Tablets
+                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 18.png" alt="ARGIDUS" class="product-logo mt-3 mb-2" />
+                    <div class="vividu-orthopedic-text">
+                        L-Arginine 3gms, Proanthocyanidin 75mg
                     </div>
                 </div>
             </div>
 
-            <!-- Last card: TENDOFORCE group -->
+            <!-- Last card -->
             <div class="col-md-4">
-                <div class="vividu-orthopedic-card vividu-orthopedic-blue">
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: -4px; font-size: 32px; font-weight: bolder; color: darkslateblue;">
-                            VIVIFer
-                        </h1>
-                        <small style="font-size: 12px; font-weight:600; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+                <div class="vividu-orthopedic-card vividu-orthopedic-blue text-center">
+                    <img src="img/VIVIDUS Logos/Frame 19 (1).png" alt="VIVIFer" class="product-logo mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Ferrous ascorbate 100mg, Cyanocoblamin<br>
-                        75mcg, Folic acid 1.5mg, Pyridoxine<br>
-                        Hudrochloride 1.5mg, Cholecalciferil 1000 IU
+                        Ferrous Ascorbate 100mg, Cyanocobalamin 75mcg,<br>
+                        Folic Acid 1.5mg, Pyridoxine Hydrochloride 1.5mg,<br>
+                        Cholecalciferol 1000 IU
                     </div>
-                    <div style="display: flex; align-items: end; gap:10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: 0; font-size: 32px; font-weight: bolder; color: #0f7614;">
-                            VIVILIFE
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 8.png" alt="VIVILIFE" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
-                        Biotin 30mcg, Beta-Carotene 5mg, Chromium <br>
-                        65mcg, Selenium 30mcg, Riboflavin 2mg,<br>
-                        Vitamin C 50mg, Zinc Sulphate 7.5mg with<br>
+                        Biotin 30mcg, Beta-Carotene 5mg, Chromium 65mcg,
+                        Selenium 30mcg, Riboflavin 2mg,
+                        Vitamin C 50mg, Zinc Sulphate 7.5mg with
                         Multivitamin & Multi Minerals
                     </div>
-                    <div style="display: flex; align-items: end; gap: 10px; justify-content: center;" class="mb-2">
-                        <h1 class="vividu-orthopedic-title"
-                            style="margin: 0; font-size: 32px; font-weight: bolder; color: #09184d;">
-                            Calcidus
-                        </h1>
-                        <small style="font-size: 14px; font-weight: bolder; color: #4a4a4a; letter-spacing: 1px;">
-                            TABLETS
-                        </small>
-                    </div>
+
+                    <img src="img/VIVIDUS Logos/Frame 7.png" alt="Calcidus" class="product-logo mt-3 mb-2" />
                     <div class="vividu-orthopedic-text">
                         Coral Calcium (from Coral Grains) 500mg,<br>
                         Vitamin D3 500 IU
@@ -222,9 +149,10 @@
     </div>
 
 
+
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -242,8 +170,8 @@
     <!-- our contact section code end -->
 
     <!-- footer section code start  -->
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
