--- a/cardiac.html
+++ b/cardiac.html
@@ -17,12 +17,12 @@
 
 </head>
 
-<body> 
+<body>
 
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -69,42 +69,64 @@
     </div>
     <!--banner section end -->
 
-    <div class="container-fluid p-5">
+    <div class="container-fluid cardiac-vividus-container ">
         <div class="text-start vividu-orthopedic-header mb-4">
-            <h2>CARDIAC & DIABETIC</h2>
+            <h2>CARDIAC & DIABETIC</h2> 
         </div>
         <div class="row g-4 d-flex">
+
             <!-- Glimedus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
                     <h2 class="cardiac-vividus-title">
-                        <span style="color: darkgreen;">Glimedus</span> - M1 / M2
+                        <img src="img/VIVIDUS Logos/Frame 23.png" alt="Glimedus - M1 / M2" class="product-logo" />
                     </h2>
                     <p>Glimepiride 1mg / 2mg + Metformin 500mg</p>
+
                     <h2 class="cardiac-vividus-title">
-                        <span style="color: darkgreen;">Glimedus</span> - M1 / M2 Forte
+                        <img src="img/VIVIDUS Logos/Frame 24.png" alt="Glimedus - M1 / M2 Forte"
+                            class="product-logo" />
                     </h2>
                     <p>Glimepiride 1mg / 2mg + Metformin 1000mg</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkgreen;">Glimedus</span> - MV1 / MV2</h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 25.png" alt="Glimedus - MV1 / MV2" class="product-logo" />
+                    </h2>
                     <p>Glimepiride 1mg / 2mg + Voglibose 0.2mg + Metformin 500mg</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkgreen;">Glimedus</span> - MP1 / MP2</h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 26.png" alt="Glimedus - MP1 / MP2" class="product-logo" />
+                    </h2>
                     <p>Glimepiride 1mg / 2mg + Pioglitazone 15mg</p>
                 </div>
             </div>
 
-
             <!-- Rosunorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Rosunorm <span style="color: darkblue;">- 10</span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 50.png" alt="Rosunorm - 10" class="product-logo" />
+                    </h2>
                     <p>Rosuvastation 10mg Tablets</p>
-                    <h2 class="cardiac-vividus-title">Rosunorm <span style="color: darkblue;">- CV 10</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 49.png" alt="Rosunorm - CV 10" class="product-logo" />
+                    </h2>
                     <p>Rosuvastatin 10mg + Clopidogrel 75mg capsules</p>
-                    <h2 class="cardiac-vividus-title">Rosunorm <span style="color: darkblue;">- Gold 10</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 48.png" alt="Rosunorm - Gold 10" class="product-logo" />
+                    </h2>
                     <p>Rosuvastatin 10mg + Aspirin 75mg + Clopidogrel 75mg capsules</p>
-                    <h2 class="cardiac-vividus-title">Rosunorm <span style="color: darkblue;">- ASP 10/75</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 47.png" alt="Rosunorm - ASP 10/75" class="product-logo" />
+                    </h2>
                     <p>Rosuvastatin 10mg + Aspirin 75mg capsules</p>
-                    <h2 class="cardiac-vividus-title">Rosunorm <span style="color: darkblue;">- F 10/160</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 46.png" alt="Rosunorm - F 10/160" class="product-logo" />
+                    </h2>
                     <p>Rosuvastatin 10mg + Fenofibrate 160mg capsules</p>
                 </div>
             </div>
@@ -112,15 +134,24 @@
             <!-- Sitaphil / Dapadus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span
-                            style="color: darkgoldenrod;">M 50/500 </span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 32.png" alt="Sitaphil M 50/500" class="product-logo" />
+                    </h2>
                     <p>Sitagliptin 50mg + Metformin 500mg tablets</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Sitaphil</span> <span
-                            style="color: darkgoldenrod;">DM 100/10/500 </span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 57.png" alt="Sitaphil DM 100/10/500" class="product-logo" />
+                    </h2>
                     <p>Sitagliptin 100mg + Dapagliflozin 10mg + Metformin 500mg tablets</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Dapadus</span> 10 </h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 22.png" alt="Dapadus 10" class="product-logo" />
+                    </h2>
                     <p>Dapagliflozin 10mg tablets</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Dapadus</span>- M 10/500</h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 21.png" alt="Dapadus M 10/500" class="product-logo" />
+                    </h2>
                     <p>Dapagliflozin 10mg + Metformin 500mg tablets</p>
                 </div>
             </div>
@@ -128,16 +159,24 @@
             <!-- Tenonorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Tenenorm</span> - 20</h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 27.png" alt="Tenenorm - 20" class="product-logo" />
+                    </h2>
                     <p>Teneligliptin 20mg tablets</p>
-                    <h2 class="cardiac-vividus-title"><span style="color: darkblue;">Tenenorm</span> - M500</h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 28.png" alt="Tenenorm - M500" class="product-logo" />
+                    </h2>
                     <p>Teneligliptin 20mg + Metformin 500mg tablets</p>
                 </div>
             </div>
+
             <!-- M-COBAL CD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: rgb(4, 4, 90);">M-COBAL</span> CD</h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 31.png" alt="M-COBAL CD" class="product-logo" />
+                    </h2>
                     <p>Mecobalamin 1500mcg + Alpha Lipoic Acid 100mg+ Myo-Inositol 100mg + Benfotiamine 150mg Folic Acid
                         1.5mg + Chromium 200mcg + Selenium 55mcg Capsules</p>
                 </div>
@@ -146,7 +185,9 @@
             <!-- Vigor-OD -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: rgb(5, 143, 5);">Vigor</span>-OD</h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 56.png" alt="Vigor-OD" class="product-logo" />
+                    </h2>
                     <p>Vitamin C 80mg Niacinamide 23mg Vitamin 81 2.3mg +Vitamin B2 3.2 mg Vitamin B6 3mg + Calcium
                         Pantothenate 5mg Folic Acid 176.47mcg + Vitamin B12</p>
                 </div>
@@ -155,9 +196,14 @@
             <!-- Pregadus / Gaba dus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Pregadus - M75</h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 29.png" alt="Pregadus - M75" class="product-logo" />
+                    </h2>
                     <p>Pregabalin 75mg + Methylcobalamin 750mcg capsules</p>
-                    <h2 class="cardiac-vividus-title">Gabadus - NT</h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 30.png" alt="Gabadus - NT" class="product-logo" />
+                    </h2>
                     <p>Gabapentin 400mg + Nortriptyline capsules</p>
                 </div>
             </div>
@@ -165,11 +211,19 @@
             <!-- Cinorm -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Cinorm <span style="color: darkblue;">- 5 / 10</span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 53.png" alt="Cinorm - 5 / 10" class="product-logo" />
+                    </h2>
                     <p>Cilnidipine 5mg / 10mg tablets</p>
-                    <h2 class="cardiac-vividus-title">Cinorm <span style="color: darkblue;">- T</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 52.png" alt="Cinorm - T" class="product-logo" />
+                    </h2>
                     <p>Cilnidipine 10mg + Telmisartan 40mg tablets</p>
-                    <h2 class="cardiac-vividus-title">Cinorm <span style="color: darkblue;">- M 5 / 10</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 51.png" alt="Cinorm - M 5 / 10" class="product-logo" />
+                    </h2>
                     <p>Cilnidipine 10mg + Metoprolol 50mg tablets</p>
                 </div>
             </div>
@@ -177,20 +231,29 @@
             <!-- Telmidus -->
             <div class="col-md-4 mb-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Telmidus <span style="color: darkblue;">- 40</span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 45.png" alt="Telmidus - 40" class="product-logo" />
+                    </h2>
                     <p>Telmisartan 40mg tablets</p>
-                    <h2 class="cardiac-vividus-title">Telmidus <span style="color: darkblue;">- H</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 44.png" alt="Telmidus - H" class="product-logo" />
+                    </h2>
                     <p>Telmisartan 40mg + HCTZ 12.5mg tablets</p>
-                    <h2 class="cardiac-vividus-title">Telmidus <span style="color: darkblue;">- M50</span></h2>
+
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 43.png" alt="Telmidus - M50" class="product-logo" />
+                    </h2>
                     <p>Telmisartan 40mg + Metoprolol 50mg tablets</p>
                 </div>
             </div>
 
-
             <!-- Vivimet XL -->
             <div class="col-md-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Vivimet XL <span style="color: darkblue;">- 25/50</span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 42.png" alt="Vivimet XL - 25/50" class="product-logo" />
+                    </h2>
                     <p>Metoprolol Succinate (ER) 25/50mg Tablets IP</p>
                 </div>
             </div>
@@ -198,7 +261,9 @@
             <!-- AB Norm-100 -->
             <div class="col-md-4">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title"><span style="color: darkgreen;">AB Norm</span> - 100</h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 37.png" alt="AB Norm - 100" class="product-logo" />
+                    </h2>
                     <p>Acebrophylline 100mg Capsules</p>
                 </div>
             </div>
@@ -206,16 +271,20 @@
             <!-- Rabedus-DSR -->
             <div class="col-md-4 ">
                 <div class="card p-3 cardiac-vividus-card">
-                    <h2 class="cardiac-vividus-title">Rabedus <span style="color: darkgreen;">- DSR</span></h2>
+                    <h2 class="cardiac-vividus-title">
+                        <img src="img/VIVIDUS Logos/Frame 41.png" alt="Rabedus - DSR" class="product-logo" />
+                    </h2>
                     <p>Rabeprazole 20mg + Domperidone 30mg Capsules</p>
                 </div>
             </div>
+
         </div>
     </div>
 
+
     <!-- our contact  section code start -->
     <section class="vividus-contecthome-section text-white">
-        <div class="container-fluid px-5">
+        <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <h2 class="vividus-contecthome-title">Get Started on Your <br> Health Journey Today</h2>
@@ -232,8 +301,8 @@
     </section>
     <!-- our contact section code end -->
 
-    <footer class="vividus-footer-main py-4">
-        <div class="container-fluid px-5">
+    <footer class="vividus-footer-main">
+        <div class="container-fluid p-0">
             <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
                     <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
@@ -286,7 +355,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
